# Billing_App

./: .gitignore  README.md  build.spec  pyproject.toml  requirements.txt
.github/workflows/: build-windows.yml  build.yml
sample_templates/Bella Vista/March/: .billingapp.json  Breakdown of Services - Bella Vista - March.xlsx  Invoice Bella16.docx
sample_templates/May 2026/: Breakdown of Services - Bella Vista - May.xlsx  Invoice 1.docx
scripts/: generate_sample_templates.py
src/billing_app/: app_paths.py  main.py  resources.py
src/billing_app/services/: auto_detect.py  auxiliary_excels.py  calendar_util.py  file_role.py  folder_analyzer.py  invoice_generator.py  pdf_export.py  xls_to_xlsx.py
src/billing_app/ui/: app.py  cell_picker.py  dialogs.py  generator_screen.py  settings.py
